--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,8 @@ jobs:
         matrix:
             browsers: [chrome, edge]
     steps:
+      - name: Install dependencies
+        run: npm install  
       - name: Checkout
         uses: actions/checkout@v4
       # Install npm dependencies, cache them correctly
