git commit -m "fixed typos"

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Cypress run in ${{matrix.browsers}}
         uses: cypress-io/github-action@v6
         with:
-            browsers: ${{matrix.browsers}}
+            browser: ${{matrix.browsers}}
             command: npx cypress run --browser ${{matrix.browsers}} --reporter-options reportDir=cypress/reports/reports/${{matrix.browsers}}
 
       - name: Merge Mochawesome Reports
